[package]
name = "lde"
version = "0.2.0"
authors = ["CasualX <CasualX@GitHub.com>"]

description = "Length disassembler engine for x86 and x86_64"

documentation = "https://docs.rs/crate/lde/"
repository = "https://github.com/CasualX/lde-rs"

readme = "readme.md"

keywords = ["length", "disassembler", "x86", "x86_64"]

license = "MIT"
