[package]
name = "lde"
version = "0.3.0"
authors = ["Casper <CasualX@users.noreply.github.com>"]

description = "Length disassembler for x86 and x86_64."

documentation = "https://docs.rs/crate/lde/"
repository = "https://github.com/CasualX/lde"

keywords = ["length", "disassembler", "x64", "x86", "x86_64"]
categories = ["parser-implementations"]

readme = "readme.md"
license = "MIT"

[badges]
appveyor = { repository = "CasualX/lde" }
travis-ci = { repository = "CasualX/lde" }
